# Genshin_StarRail_fps_unlocker

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh_cn.md
src/: NTSYSAPI.h  NTSYSCALLAPI.h  fastmemcp.h  inireader.h  main.cpp  mempeload.c  mempeload.c_dis  shellcode_header.h  syscall.asm
unlockfps/: main.cpp
vscode/: NTSYSAPI.h  fastmemcp.h  inireader.h  main.cpp
